--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
     "src/**/*.tsx",
     "src/**/*.jsx",
     "src/**/*.vue",
-    "src/**/*.json"
+    "src/**/*.json",
+    "scr/components/**/*.json"
   ]
 }
