feat(interceptor): 框架基础建设：添加自定义presets | 修改部分编辑器设置 ｜ 添加部分公用方法

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
     "src/**/*.jsx",
     "src/**/*.vue",
     "src/**/*.json",
-    "scr/components/**/*.json"
+    "scr/components/**/*.vue",
+    "scr/components/**/*.ts"
   ]
 }
