--- a/package.json
+++ b/package.json
@@ -89,6 +89,9 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-4010520240507001",
     "czg": "^1.9.3",
     "dayjs": "1.11.10",
+    "highlight.js": "^11.9.0",
+    "marked": "^13.0.1",
+    "marked-highlight": "^2.1.3",
     "pinia": "2.0.36",
     "pinia-plugin-persistedstate": "3.2.1",
     "qs": "6.5.3",
@@ -146,6 +149,7 @@
     "typescript": "^4.9.5",
     "unocss": "^0.58.9",
     "unocss-applet": "^0.7.8",
+    "unocss-preset-theme": "^0.13.0",
     "unplugin-auto-import": "^0.17.6",
     "vite": "5.2.8",
     "vite-plugin-restart": "^0.4.0",
