--- a/env/.env
+++ b/env/.env
@@ -1,8 +1,8 @@
 VITE_APP_TITLE = 'unibest'
-VITE_APP_PORT = 9000
+VITE_APP_PORT = 8082
 
 VITE_UNI_APPID = 'H57F2ACE4'
-VITE_WX_APPID = 'wxa2abb91f64032a2b'
+VITE_WX_APPID = 'wx2e036ff03f97aa99'
 
 # h5部署网站的base，配置到 manifest.config.ts 里的 h5.router.base
 VITE_APP_PUBLIC_BASE=/unibest/
